--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -205,20 +205,28 @@ padding: 10px;
 .thumbnail{
 width: 100%;
 height: 230px;
+
 overflow: hidden;
 }
 .thumbnail img{
 width: 500px;
+
 height: auto;
+
+//width: 100%;
+//height: auto;
 position: relative;
 left: -25%;
-top: -5%;
+//top: -5%;
+top: -10%;
+
 }
 .thumbnail a{
 float: left;
 position: relative;
 width: 100%;
 height: 230px;
+
 }
 .thumbnail a span {
 display: none;
